fix(game): game info no longer wraps around boxart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,8 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
-@import "bootswatch/superhero/variables";
 @import "bootstrap";
-@import "bootswatch/superhero/bootswatch";
+@import "bootstrap-sprockets";
 @import 'slick';
 
 html>body {
@@ -103,11 +101,15 @@ html>body {
     box-shadow: 0px 0px 5px #98f5ff;
     margin: 10px;
     margin-right: 40px;
+  }
+
+  .game-show-left-side {
     float: left;
   }
 
-  .collection-button {
-    margin-right: 35px;
+  .wishlist-button {
+    float: right;
+    margin-right: 30px;
   }
 
   //Game Thumbnails
@@ -384,6 +386,8 @@ nav.navbar {
 
 .navbar-default .navbar-nav>li>a.nav-link {
   color: #b8b6b4;
+  font-size: 12px;
+  font-family: tahoma;
 }
 
 .navbar-default .navbar-nav>li>a.nav-link:hover,
